@@ -1685,3 +1685,8 @@ input.lms-ui-quick-search.lms-ui-quick-search-active {
 		border-radius: unset;
 	}
 }
+
+#quicksearch {
+	display: flex;
+	align-items: flex-start;
+}
