@@ -4001,4 +4001,17 @@ $_LANG['whole subtree'] = 'całe poddrzewo';
 
 $_LANG['<!mac>- none -'] = '- brak -';
 
+$_LANG['<!qs>customer id'] = 'identyfikator klienta';
+$_LANG['<!qs>customer name'] = 'nazwa klienta';
+$_LANG['<!qs>address'] = 'adres';
+$_LANG['<!qs>post name'] = 'nazwa korespondencyjna';
+$_LANG['<!qs>post address'] = 'adres korespondencyjny';
+$_LANG['<!qs>location address'] = 'adres lokalizacyjny';
+
+$_LANG['<!qs>node id'] = 'identyfikator komputera';
+$_LANG['<!qs>node name'] = 'nazwa komputera';
+$_LANG['<!qs>ip address'] = 'adres ip';
+$_LANG['<!qs>public ip address'] = 'adres publiczny ip';
+$_LANG['<!qs>mac address'] = 'adres mac';
+
 ?>
