@@ -41,17 +41,13 @@
 					<div id="quicksearch">
 						<div id="autosuggest"><ul><li></li></ul></div>
 						<form method="post" name="quicksearch" action="?m=quicksearch" id="quicksearch">
-							<table width="100%" cellpadding="0" cellspacing="0">
-								<tr>
-									<td style="width: 1%" class="nobr">
-									{trans("Search:")}
-									{include file="quicksearchcontents.html"}
-									{* Enter key submit hack for IE *}
-									{* don't change this to img element as it breaks auto search after pressing enter outside autosuggest box *}
-									<input type="image" src="img/empty.gif" width="0" height="0" style="border: none;">
-									</td>
-								</tr>
-							</table>
+							<span>
+								{trans("Search:")}
+							</span>
+							{include file="quicksearchcontents.html"}
+							{* Enter key submit hack for IE *}
+							{* don't change this to img element as it breaks auto search after pressing enter outside autosuggest box *}
+							<input type="image" src="img/empty.gif" width="0" height="0" style="border: none;">
 						</form>
 					</div>
 					{/block}
