@@ -1,22 +1,101 @@
 {block name="quicksearchcontents"}
+
+&nbsp;
 <img src="img/customer.gif" alt="" {tip text="Enter customer ID, first/lastname, email or address and press Enter"}>
+<select id="qs-customer-properties" class="lms-ui-quicksearch-property-selection lms-ui-multiselect-selection-group" data-mode="customer" multiple>
+    <option value="id"{if !isset($qs_properties.customer) || isset($qs_properties.customer.id)} selected{/if}>{trans("<!qs>customer id")}</option>
+    <option value="name"{if !isset($qs_properties.customer) || isset($qs_properties.customer.name)} selected{/if}>{trans("<!qs>customer name")}</option>
+    <option value="address"{if !isset($qs_properties.customer) || isset($qs_properties.customer.address)} selected{/if}>{trans("<!qs>address")}</option>
+    <option value="post_name"{if !isset($qs_properties.customer) || isset($qs_properties.customer.post_name)} selected{/if}>{trans("<!qs>post name")}</option>
+    <option value="post_address"{if !isset($qs_properties.customer) || isset($qs_properties.customer.post_address)} selected{/if}>{trans("<!qs>post address")}</option>
+    <option value="location_address"{if !isset($qs_properties.customer) || isset($qs_properties.customer.location_address)} selected{/if}>{trans("<!qs>location address")}</option>
+    <option value="email"{if !isset($qs_properties.customer) || isset($qs_properties.customer.email)} selected{/if}>{trans("email")}</option>
+</select>
+&nbsp;
 <input type="text" name="qs[customer]" data-mode="customer" value="" size="15" {tip text="Enter customer ID, first/lastname, email or address and press Enter" class="blend lms-ui-quick-search"}>
-&nbsp;<img src="img/phone.gif" alt="" {tip text="Enter phone number and press Enter"}>
+
+&nbsp;
+<img src="img/phone.gif" alt="" {tip text="Enter phone number and press Enter"}>
+&nbsp;
 <input type="text" name="qs[phone]" data-mode="phone" value="" size="15" {tip text="Enter phone number and press Enter" class="blend lms-ui-quick-search"}>
-&nbsp;<img src="img/node.gif" alt="" {tip text="Enter node ID, name, IP address or MAC address and press Enter"}>
+
+&nbsp;
+<img src="img/node.gif" alt="" {tip text="Enter node ID, name, IP address or MAC address and press Enter"}>
+<select id="qs-node-properties" class="lms-ui-quicksearch-property-selection lms-ui-multiselect-selection-group" data-mode="node" multiple>
+    <option value="id"{if !isset($qs_properties.node) || isset($qs_properties.node.id)} selected{/if}>{trans("<!qs>node id")}</option>
+    <option value="name"{if !isset($qs_properties.node) || isset($qs_properties.node.name)} selected{/if}>{trans("<!qs>node name")}</option>
+    <option value="ip"{if !isset($qs_properties.node) || isset($qs_properties.node.ip)} selected{/if}>{trans("<!qs>ip address")}</option>
+    <option value="public_ip"{if !isset($qs_properties.node) || isset($qs_properties.node.public_ip)} selected{/if}>{trans("<!qs>public ip address")}</option>
+    <option value="mac"{if !isset($qs_properties.node) || isset($qs_properties.node.mac)} selected{/if}>{trans("<!qs>mac address")}</option>
+</select>
+&nbsp;
 <input type="text" name="qs[node]" data-mode="node" value="" size="15" {tip text="Enter node ID, name, IP address or MAC address and press Enter" class="blend lms-ui-quick-search"}>
-&nbsp;<img src="img/netnode.png" alt="" {tip text="Enter netnode ID or name and press Enter"}>
+
+&nbsp;
+<img src="img/netnode.png" alt="" {tip text="Enter netnode ID or name and press Enter"}>
+&nbsp;
 <input type="text" name="qs[netnode]" data-mode="netnode" value="" size="15" {tip text="Enter netnode ID or name and press Enter" class="blend lms-ui-quick-search"}>
-&nbsp;<img src="img/netdev.gif" alt="" {tip text="Enter netdevice ID or name and press Enter"}>
+
+&nbsp;
+<img src="img/netdev.gif" alt="" {tip text="Enter netdevice ID or name and press Enter"}>
+&nbsp;
 <input type="text" name="qs[netdevice]" data-mode="netdevice" value="" size="15" {tip text="Enter device ID, name or serial number and press Enter" class="blend lms-ui-quick-search"}>
-&nbsp;<img src="img/wireless.gif" alt="" {tip text="Enter wireless SSID and press Enter"}>
+
+&nbsp;
+<img src="img/wireless.gif" alt="" {tip text="Enter wireless SSID and press Enter"}>
+&nbsp;
 <input type="text" name="qs[wireless]" data-mode="wireless" value="" size="15" {tip text="Enter wireless SSID and press Enter" class="blend lms-ui-quick-search"}>
-&nbsp;<img src="img/ticket.gif" alt="" {tip text="Enter request tracker ID, subject or requestor name and press Enter"}>
+
+&nbsp;
+<img src="img/ticket.gif" alt="" {tip text="Enter request tracker ID, subject or requestor name and press Enter"}>
+&nbsp;
 <input type="text" name="qs[ticket]" data-mode="ticket" value="" size="15" {tip text="Enter request tracker ID, subject or requestor name and press Enter" class="blend lms-ui-quick-search"}>
-&nbsp;<img src="img/account.gif" alt="" {tip text="Enter account or alias name and press Enter"}>
+
+&nbsp;
+<img src="img/account.gif" alt="" {tip text="Enter account or alias name and press Enter"}>
+&nbsp;
 <input type="text" name="qs[account]" data-mode="account" value="" size="15" {tip text="Enter account or alias name and press Enter" class="blend lms-ui-quick-search"}>
-&nbsp;<img src="img/docum.gif" alt="" {tip text="Enter document number and press Enter"}>
+
+&nbsp;
+<img src="img/docum.gif" alt="" {tip text="Enter document number and press Enter"}>
+&nbsp;
 <input type="text" name="qs[document]" data-mode="document" value="" size="15" {tip text="Enter document number and press Enter" class="blend lms-ui-quick-search"}>
-&nbsp;<img src="img/customers.gif" alt="" {tip text="Enter external customer ID fragment and press Enter"}>
+
+&nbsp;
+<img src="img/customers.gif" alt="" {tip text="Enter external customer ID fragment and press Enter"}>
+&nbsp;
 <input type="text" name="qs[customerext]" data-mode="customerext" value="" size="15" {tip text="Enter external customer ID fragment and press Enter" class="blend lms-ui-quick-search"}>
+
 {/block}
+<script>
+    $('select.lms-ui-quicksearch-property-selection').each(function(key) {
+        var icon = $(this).prev().attr('src');
+        var id = $(this).attr('id');
+        var mode = $(this).attr('data-mode');
+        $(this).prev().remove();
+		multiselect({
+			id: id,
+			defaultValue: null,
+			icon: icon,
+			type: 'tiny'
+		});
+		$('#' + id).change(function(e) {
+			var properties = [];
+			$('#' + id + '-layer input:checked').each(function() {
+				properties.push($(this).val());
+            });
+            var data = {
+                "qs-properties": {}
+            };
+            {foreach $qs_properties as $mode => $properties}
+            data["qs-properties"]["{$mode}"] = "{implode(',', array_keys($properties))}";
+            {/foreach}
+            data["qs-properties"][mode] = properties.join(',');
+            $.ajax({
+				method: "POST",
+				url: '?m=persistentsetting',
+				data: data
+			});
+		});
+	});
+</script>
